[gd_scene load_steps=9 format=2]

[ext_resource path="res://Sprites/UI/InventoryScreen.png" type="Texture" id=1]
[ext_resource path="res://Sprites/UI/HUD_Party_BG_02.png" type="Texture" id=2]
[ext_resource path="res://Shaders/noise_canvas_shader.tres" type="Material" id=3]
[ext_resource path="res://Scripts/UI/Dialogue/TradingScreen.gd" type="Script" id=4]
[ext_resource path="res://Scripts/Misc/FadeInController.gd" type="Script" id=5]
[ext_resource path="res://fonts/zrnic rg_0.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://prefabs/UI/ItemContext_Button.tscn" type="PackedScene" id=7]

[sub_resource type="DynamicFont" id=1]
size = 39
extra_spacing_char = 2
extra_spacing_space = 18
font_data = ExtResource( 6 )

[node name="TradingScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="TextureRect" parent="."]
material = ExtResource( 3 )
margin_right = 1024.0
margin_bottom = 600.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 1
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tradingscreen" type="Sprite" parent="."]
position = Vector2( 512, 296 )
scale = Vector2( 0.543857, 0.543857 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="tradingscreen"]
margin_left = -529.551
margin_top = -463.357
margin_right = -217.551
margin_bottom = -416.357
custom_fonts/font = SubResource( 1 )
text = "Trading       Horse"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemNameTag" type="Label" parent="tradingscreen"]
margin_left = -509.325
margin_top = 159.969
margin_right = -77.3252
margin_bottom = 206.969
rect_scale = Vector2( 0.741699, 0.741699 )
custom_fonts/font = SubResource( 1 )
text = "Item"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InventoryContainer" type="Node2D" parent="."]
position = Vector2( 217, 114 )

[node name="Display" type="Sprite" parent="."]
position = Vector2( 704, 224 )
scale = Vector2( 0.833333, 0.833333 )

[node name="Context" type="Node" parent="."]

[node name="Description" type="Label" parent="Context"]
margin_left = 224.0
margin_top = 416.0
margin_right = 840.0
margin_bottom = 472.0
text = "description for an item"
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonPoint" type="Node2D" parent="Context"]
position = Vector2( 400, 512 )

[node name="ItemInfo" type="Label" parent="Context"]
margin_left = 232.0
margin_top = 504.0
margin_right = 272.0
margin_bottom = 518.0
text = "Value:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuyButton" parent="Context" instance=ExtResource( 7 )]
margin_left = 504.0
margin_top = 504.0
margin_right = 504.0
margin_bottom = 504.0
text = "BUY"
[connection signal="fade_in_complete" from="BG" to="." method="_on_BG_fade_in_complete"]
[connection signal="pressed" from="Context/BuyButton" to="." method="_on_BuyButton_pressed"]
